[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/LanguageSelection.gd" type="Script" id=1]
[ext_resource path="res://ui/theme.tres" type="Theme" id=2]

[node name="LanguageSelection" type="PopupPanel"]
margin_right = 155.0
margin_bottom = 70.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 208.0
margin_bottom = 73.0

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 203.0
margin_bottom = 20.0
text = "LANGUAGE_SELECTION"

[node name="LanguageChooser" type="OptionButton" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 203.0
margin_bottom = 44.0

[node name="ButtonOK" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 203.0
margin_bottom = 68.0
text = "BUTTON_OK"

[connection signal="about_to_show" from="." to="." method="_on_LanguageSelection_about_to_show"]
[connection signal="item_selected" from="VBoxContainer/LanguageChooser" to="." method="_on_LanguageChooser_item_selected"]
[connection signal="pressed" from="VBoxContainer/ButtonOK" to="." method="_on_ButtonOK_pressed"]
